# poc-monotrail

./: .gitignore  Cargo.toml  Readme.md  benchmark.sh  build_and_pytest.sh  cargo_build_and_test.sh  cargo_test_and_pytest.sh  docker_build.sh  docker_example.sh  flamegraph.sh  index.html  jupyter_integration.ipynb  load_monorail.pth  load_monotrail.pth  load_virtual_sprawl.pth  make_paper.py  make_paper.sh  mst.sh  pip_wheels.txt  pip_wheels_selected.txt  popular.txt  pyproject.toml  requirements-test.txt  run_ci_tests.sh  wheel_benchmark.sh
.github/workflows/: debug.yml  release-pypi.yml  release.yml  test.yml  test_cargo.yml  test_maturin.yml  test_yml
crates/install-wheel-rs/: Cargo.toml  pyproject.toml
crates/install-wheel-rs/src/: install_location.rs  lib.rs  main.rs  python_bindings.rs  wheel.rs  wheel_tags.rs
crates/monotrail/: Cargo.toml
crates/monotrail-utils/: Cargo.toml
crates/monotrail-utils/src/: lib.rs  parse_cpython_args.rs  requirements_txt.rs  standalone_python.rs
crates/monotrail-utils/tests/: test_requirements_txt_empty_file.rs
crates/monotrail/src/: cli.rs  convert_finder_data.py  get_pep508_env.py  inject_and_run.rs  install.rs  lib.rs  main.rs  markers.rs  monotrail.rs  package_index.rs  ppipx.rs  python_bindings.rs  source_distribution.rs  spec.rs  standalone_python.rs  utils.rs  venv_parser.rs  verify_installation.rs
crates/monotrail/src/poetry_integration/: lock.rs  poetry_lock.rs  poetry_toml.rs  read_dependencies.rs  run.rs
crates/monotrail/tests/: test_binary.rs  test_errors.rs
data_science_project/: import_pandas.py  make_paper.py  numpy_version.py  pyproject.toml
data_science_project/data_science_project/: numpy_identity.py
data_science_project/tests/: test_data_science_project.py
flipstring/: flip.py  requirements-frozen.txt  requirements.txt
install-wheel-rs/: Cargo.toml  Readme.md  pyproject.toml  run_tests.sh
install-wheel-rs/src/: install_location.rs  lib.rs  pip_compileall.py  python_bindings.rs  wheel.rs  wheel_tags.rs
install-wheel-rs/test/: test_install_wheel_rs.py
jupyter-launcher/: pyproject.toml  version.ipynb
monotrail-utils/: Cargo.toml
monotrail-utils/src/: lib.rs  requirements_txt.rs
monotrail-utils/tests/: test_requirements_txt_empty_file.rs
python/monorail/: __init__.py  load_monorail.py  monorail.pyi  monorail_path_finder.py  run.py
python/monotrail/: __init__.py  _load_monotrail.py  _monotrail_finder.py  convert_finder_data.py  load_monotrail.py  monotrail.pyi  monotrail_finder.py  monotrail_path_finder.py  run.py  run_python.py  run_script.py
python/virtual_sprawl/: __init__.py  get_pep508_env.py  load_virtual_sprawl.py  run.py  virtual_sprawl.pyi  virtual_sprawl_path_finder.py
resources/: Index.md  demo.ipynb  python_build_standalone_known_good_release.json.zst
resources/poetry_boostrap_lock/: pyproject.toml
say_hello/: say_hello.py
src/: cli.rs  convert_finder_data.py  get_pep508_env.py  get_pep508_env_direct.py  get_pep508_env_function.py  inject_and_run.rs  install.rs  install_location.rs  lib.rs  main.rs  markers.rs  monorail.rs  monotrail.rs  package_index.rs  poetry.rs  poetry_lock.rs  ppipx.rs  python_bindings.rs  requirements_txt.rs  source_distribution.rs  spec.rs  standalone_python.rs  utils.rs  venv_parser.rs  verify_installation.rs  virtual_sprawl.rs  wheel.rs  wheel_tags.rs
src/poetry/: lock.rs  mod.rs  poetry_lock.rs  poetry_toml.rs  read_dependencies.rs
src/poetry/poetry_boostrap_lock/: pyproject.toml
src/poetry_integration/: lock.rs  mod.rs  poetry_lock.rs  poetry_toml.rs  read_dependencies.rs  run.rs
src/poetry_integration/poetry_boostrap_lock/: pyproject.toml
srcery/: pyproject.toml
srcery/src/: __init__.py  potion.py
test/: compare.py  compare_pip.py  compare_poetry.py  run_tqdm_test.py  test_all.py  test_compare_pip.py  test_compare_poetry.py  test_piptests.py  test_popular.py  test_tqdm.py  tqdm_test.py  utils.py
test-data/: popular.txt  standalone_python_github_release.json  standalone_python_github_release.json.zstd  standalone_python_known_good_release.json.zstd
test-data/lockfile-outdated/: pyproject.toml
test-data/poetry-1.1.13/: pyproject.toml
test-data/poetry-1.2.0b1/: pyproject.toml
test-data/poetry-1.3-django/: pyproject.toml
test-data/poetry/black/: pyproject.toml
test-data/poetry/data-science/: benchmark.sh  benchmark.txt  hyperfine.md  pyproject.toml
test-data/poetry/mst/: hyperfine.md  pyproject.toml
test-data/pypi/: cffi.json.zstd
test-data/requirements-pydantic/: README.md
test-data/requirements-txt/: basic.json  constraints-a.json  constraints-b.json  empty.json  for-poetry.json  include-a.json  include-b.json  poetry-with-hashes.json  small.json  whitespace.json
test-data/requirements-txt-ambiguity/: Readme.md  requirements-ambiguous.txt
test-data/requirements-txt-ambiguity/numpy/: pyproject.toml
test-data/requirements-txt-ambiguity/numpy%/: pyproject.toml
test-data/requirements-txt-ambiguity/numpy>=1/: pyproject.toml
test-data/tags/: cp38-ubuntu-20-04.json  record.py
test-data/wheels/: bio_embeddings_PLUS-0.1.1-py3-none-any.whl  colander-0.9.9-py2.py3-none-any.whl
test/binary/: test_binary.py
test/install/: test_all.py  test_compare_pip.py  test_compare_poetry.py  test_monotrail_install_frozen.py  test_piptests.py  test_popular.py  test_tqdm.py  utils.py
test/install_wheel_rs/: test_all.py  test_compare_pip.py  test_compare_poetry.py  test_piptests.py  test_popular.py  test_tqdm.py  test_tqdm_impl.py  utils.py
test/monotrail_bin/: test_install_frozen.py
test/python/: from_git.ipynb  interactive.ipynb  test_notebooks.py  test_runner.py  test_spec_paths.py  test_version_conflict_warning.py
test_binary/: test_all.py  test_compare_pip.py  test_compare_poetry.py  test_piptests.py  test_popular.py  test_tqdm.py  utils.py
test_python/: from_git.ipynb  interactive.ipynb  jupyter_integration.ipynb  notebook.sh  notebooks.sh  test_flipstring.py  test_spec_paths.py  test_version_conflict_warning.py
tests/: test_binary.rs  test_errors.rs  test_manylinux-rs
