[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
fs-err = "2.9.0"
fs2 = "0.4.3"
indoc = "2.0.4"
logtest = "2.0.0"
mockito = "1.2.0"
pep508_rs = { version = "0.2.1", features = ["serde"] }
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3-py37"] }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
target-lexicon = "0.12.11"
tempfile = "3.8.0"
thiserror = "1.0.48"
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
unscanny = "0.1.0"
walkdir = "2.4.0"
which = "4.4.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
lto = "thin"

[profile.perf]
inherits = "release"
debug = 1

# zip implementation
[profile.dev.package.adler]
opt-level = 3

