[project]
name = "monotrail"
dependencies = ["importlib_metadata ; python_version < \"3.7\""]

[project.scripts]
monotrail_python = "monotrail.run_python:main"
monotrail_script = "monotrail.run_script:main"

[tool.maturin]
features = ["python_bindings"]
bindings = "pyo3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
