[project]
name = "monotrail"
dependencies = ["importlib_metadata ; python_version < \"3.7\""]

[project.scripts]
monotrail_python = "monotrail.run_python:main"
monotrail_script = "monotrail.run_script:main"

[tool.maturin]
features = ["python_bindings"]
bindings = "pyo3"
python-source = "python"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"
