[package]
name = "install-wheel-rs"
version = "0.0.3"
edition = "2021"
description = "Takes a wheel and installs it, either in a venv or for monotrail"

[lib]
name = "install_wheel_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
configparser = "3.0.0"
csv = "1.1.6"
fs-err = "2.7.0"
fs2 = "0.4.3"
glibc_version = "0.1.2"
goblin = "0.5.1"
platform-info = "0.2.0"
plist = "1.3.1"
pyo3 = { version = "0.16.4", features = ["extension-module", "abi3-py37"], optional = true }
python-pkginfo = "0.5.4"
regex = "1.5.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
target-lexicon = "0.12.3"
tempfile = "3.3.0"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", optional = true }
walkdir = "2.3.2"
zip = "0.6.2"

[features]
python_bindings = ["pyo3", "tracing-subscriber"]

[dev-dependencies]
indoc = "1.0.6"
