[package]
name = "install-wheel-rs"
version = "0.0.3"
edition = "2021"
description = "Takes a wheel and installs it, either in a venv or for monotrail"

[lib]
name = "install_wheel_rs"
# https://github.com/PyO3/maturin/issues/1080 :((
#crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
configparser = "3.0.1"
csv = "1.1.6"
fs-err = "2.8.1"
fs2 = "0.4.3"
glibc_version = "0.1.2"
goblin = "0.5.4"
platform-info = "1.0.0"
plist = "1.3.1"
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3-py37"], optional = true }
python-pkginfo = "0.5.4"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.5"
target-lexicon = "0.12.4"
tempfile = "3.3.0"
thiserror = "1.0.34"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", optional = true }
walkdir = "2.3.2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] } # no default features for zstd

[features]
python_bindings = ["pyo3", "tracing-subscriber"]

[dev-dependencies]
indoc = "1.0.7"
