[package]
name = "install-wheel-rs"
version = "0.0.3"
edition = "2021"
description = "Takes a wheel and installs it, either in a venv or for monotrail"

[lib]
name = "install_wheel_rs"
# https://github.com/PyO3/maturin/issues/1080 :((
#crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
configparser = "3.0.1"
csv = "1.1.6"
fs-err = { workspace = true }
fs2 = { workspace = true }
glibc_version = "0.1.2"
goblin = "0.6.0"
platform-info = "1.0.0"
plist = "1.3.1"
pyo3 = { workspace = true, features = ["extension-module", "abi3-py37"], optional = true }
python-pkginfo = "0.5.4"
regex = { workspace = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10.5"
target-lexicon = "0.12.4"
tempfile = { workspace = true }
thiserror = "1.0.34"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
walkdir = { workspace = true }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] } # no default features for zstd

[features]
python_bindings = ["pyo3", "tracing-subscriber"]

[dev-dependencies]
indoc = "2.0.0"
