[tool.poetry]
name = "jupyter-launcher"
version = "0.1.0"
description = ""
authors = ["konstin <konstin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = "^6.5.0"
notebook = "^6.4.11"
pydevd-pycharm = "~221.5591.52"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
