[package]
name = "monotrail-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
fs-err = "2.8.1"
pep508_rs = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.7.2"
tracing = "0.1.36"
unscanny = "0.1.0"

[dev-dependencies]
indoc = "2.0.0"
logtest = "2.0.0"
tempfile = "3.3.0"
