[package]
name = "monotrail-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
pep508_rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unscanny = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
logtest = { workspace = true }
tempfile = { workspace = true }
