[package]
name = "install-wheel-rs"
version = "0.0.1"
edition = "2021"
description = "Takes a wheel and installs it, either in a venv or for monotrail"

[lib]
name = "install_wheel_rs"
# https://github.com/PyO3/maturin/issues/1080 :((
#crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
configparser = "3.0.2"
csv = "1.2.2"
fs-err = { workspace = true }
fs2 = { workspace = true }
glibc_version = "0.1.2"
goblin = "0.7.1"
mailparse = "0.14.0"
once_cell = "1.18.0"
platform-info = "2.0.2"
plist = "1.5.0"
pyo3 = { workspace = true, features = ["extension-module", "abi3-py37"], optional = true }
regex = { workspace = true }
rfc2047-decoder = "1.0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
target-lexicon = "0.12.11"
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
walkdir = { workspace = true }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] } # no default features for zstd

[features]
python_bindings = ["pyo3", "tracing-subscriber"]

[dev-dependencies]
indoc = { workspace = true }
