[package]
name = "install-wheel-rs"
version = "0.0.1"
edition = "2021"
description = "Takes a wheel and installs it, either in a venv or for monotrail"
license = "MIT OR Apache-2.0"
repository = "https://github.com/konstin/poc-monotrail"
keywords = ["wheel", "python"]

[lib]
name = "install_wheel_rs"
# https://github.com/PyO3/maturin/issues/1080 :((
#crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.4", optional = true, features = ["derive", "env"] }
configparser = "3.0.4"
csv = "1.3.0"
data-encoding = "2.5.0"
fs-err = { workspace = true }
fs2 = { workspace = true }
glibc_version = "0.1.2"
goblin = "0.8.0"
mailparse = "0.14.1"
once_cell = "1.19.0"
pep508_rs = { workspace = true }
platform-info = "2.0.2"
plist = "1.6.1"
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"], optional = true }
rayon = { version = "1.10.0", optional = true }
regex = { workspace = true }
rfc2047-decoder = "1.0.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
target-lexicon = "0.12.14"
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
walkdir = { workspace = true }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] } # no default features for zstd

[features]
default = ["cli", "parallel"]
pyo3 = ["dep:pyo3", "tracing-subscriber"]
cli = ["clap"]
parallel = ["rayon"]

[dev-dependencies]
indoc = { workspace = true }

[package.metadata.dist]
dist = false
