[package]
name = "monotrail-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
cpufeatures = { workspace = true }
fs-err = { workspace = true }
fs2 = { workspace = true }
pep508_rs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unscanny = { workspace = true }
ureq = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
logtest = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }
