[package]
name = "monotrail"
version = "0.2.0"
description = "This proof of concept shows how to use python packages without virtualenvs"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
name = "monotrail"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
cpufeatures = { workspace = true }
data-encoding = "2.5.0"
dirs = "5.0.1"
fs-err = { workspace = true }
fs2 = { workspace = true }
git2 = "0.18.3"
indicatif = "0.17.8"
install-wheel-rs = { version = "0.0.1", path = "../install-wheel-rs" }
itertools = "0.12.1"
libc = "0.2.153"
libloading = "0.8.3"
libz-sys = { version = "1.1.16", features = ["static"] } # For the zig build
monotrail-utils = { version = "0.0.1", path = "../monotrail-utils" }
nix = { version = "0.28.0", features = ["process"] }
pep440_rs = "0.6.0"
pep508_rs = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"], optional = true }
rayon = "1.10.0"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unscanny = { workspace = true }
ureq = { workspace = true }
walkdir = { workspace = true }
widestring = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
logtest = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[features]
default = ["vendored"]
pyo3 = ["dep:pyo3", "install-wheel-rs/pyo3", "pep508_rs/pyo3"]
vendored = ["git2/vendored-openssl", "git2/vendored-libgit2"]


