[tool.poetry]
name = "poetry_boostrap_lock"
version = "0.1.0"
description = "A resolved lockfile for installing poetry itself, since want to use poetry for version resolution even if the user doesn't have it installed"
authors = ["konstin <konstin@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
