[tool.poetry]
name = "lockfile-outdated"
version = "0.1.0"
description = "The lockfile is outdated: boltons are missing in the lockfile"
authors = ["konstin <konstin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
boltons = "^21.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
