[tool.poetry]
name = "poetry1-3-django"
version = "0.1.0"
description = ""
authors = ["konstin <konstin@mailbox.org>"]
readme = "README.md"
packages = [{include = "poetry1"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
