[tool.poetry]
name = "poetry_boostrap_lock"
version = "0.1.0"
description = "A resolved lockfile for installing poetry itself, since want to use poetry for version resolution even if the user doesn't have it installed"
authors = ["konstin <schuetze@rostlab.org>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
poetry = "1.2.0b2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
